fix video size on mobile

--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ ul{
 
 @media screen and (max-width: 600px) {
     #video iframe{
-        width: 400px;
-        height: 225px;
+        width: 380px;
+        height: 213px;
     }
 }
